--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ aliases:
         - node_modules
   containers:
     docker: &DEFAULT
+      - user: node
       - image: jesiio/build-bus:latest
         environment:
           JVM_OPTS: -Xmx3200m
